--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,3 +18,7 @@ input[type="submit"]{
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 
 }
+
+table{
+    width: 100% !important;
+}
