--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,3 +22,34 @@ input[type="submit"]{
 table{
     width: 100% !important;
 }
+
+.newsletter {
+    padding: 80px 0;
+    background: #1C282E;
+}
+
+.newsletter .content {
+    max-width: 650px;
+    margin: 0 auto;
+    text-align: center;
+    position: relative;
+    z-index: 2; }
+.newsletter .content h3 {
+    color: white;
+    margin-bottom: 40px; }
+.newsletter .content .form-control {
+    height: 50px;
+    border-color: #ffffff;
+    border-radius:0;
+}
+.newsletter .content.form-control:focus {
+    box-shadow: none;
+    border: 2px solid #243c4f;
+}
+.newsletter .content .btn {
+    min-height: 50px;
+    border-radius:0;
+    background: #E7A83F;
+    color: #fff;
+    font-weight:600;
+}
