--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,8 +2,14 @@
     box-sizing: border-box;
 }
 
-input[type="submit"]{
-    cursor:pointer;
+/* Make the image fully responsive */
+.carousel-inner img {
+    width: 100%;
+    height: 100%;
+}
+
+input[type="submit"] {
+    cursor: pointer;
     border: 1px solid #9ca3af;
     color: #000;
     background-color: #f8f9fa;
@@ -19,15 +25,15 @@ input[type="submit"]{
     padding: .375rem .75rem;
     font-size: 1rem;
     border-radius: .25rem;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 
 }
 
-.tox-notifications-container{
+.tox-notifications-container {
     display: none;
 }
 
-table{
+table {
     width: 100% !important;
 }
 
@@ -41,25 +47,31 @@ table{
     margin: 0 auto;
     text-align: center;
     position: relative;
-    z-index: 2; }
+    z-index: 2;
+}
+
 .newsletter .content h3 {
     color: white;
-    margin-bottom: 40px; }
+    margin-bottom: 40px;
+}
+
 .newsletter .content .form-control {
     height: 50px;
     border-color: #ffffff;
-    border-radius:0;
+    border-radius: 0;
 }
+
 .newsletter .content.form-control:focus {
     box-shadow: none;
     border: 2px solid #243c4f;
 }
+
 .newsletter .content .btn {
     min-height: 50px;
-    border-radius:0;
+    border-radius: 0;
     background: #E7A83F;
     color: #fff;
-    font-weight:600;
+    font-weight: 600;
 }
 
 
@@ -326,6 +338,7 @@ table{
     .choices__list--dropdown .choices__item--selectable {
         padding-right: 100px;
     }
+
     .choices__list--dropdown .choices__item--selectable:after {
         content: attr(data-select-text);
         font-size: 12px;
@@ -335,11 +348,13 @@ table{
         top: 50%;
         transform: translateY(-50%);
     }
+
     [dir="rtl"] .choices__list--dropdown .choices__item--selectable {
         text-align: right;
         padding-left: 100px;
         padding-right: 10px;
     }
+
     [dir="rtl"] .choices__list--dropdown .choices__item--selectable:after {
         right: auto;
         left: 10px;
@@ -649,8 +664,6 @@ table{
 }
 
 
-
-
 /*//////////////////////////////////////////////////////////////////
 [ Contact 1 ]*/
 
@@ -725,6 +738,7 @@ input.input1 {
     border-radius: 25px;
     padding: 0 30px;
 }
+
 input.input1 + .shadow-input1 {
     border-radius: 25px;
 }
@@ -734,6 +748,7 @@ textarea.input1 {
     border-radius: 25px;
     padding: 12px 30px;
 }
+
 textarea.input1 + .shadow-input1 {
     border-radius: 25px;
 }
@@ -766,7 +781,7 @@ textarea.input1 + .shadow-input1 {
     width: 100%;
     height: 100%;
     box-shadow: 0px 0px 0px 0px;
-    color: rgba(87,184,70, 0.5);
+    color: rgba(87, 184, 70, 0.5);
 }
 
 .input1:focus + .shadow-input1 {
@@ -800,7 +815,7 @@ textarea.input1 + .shadow-input1 {
 }
 
 .contact1-form-btn {
-    outline:none !important;
+    outline: none !important;
     min-width: 193px;
     height: 50px;
     border-radius: 25px;
@@ -844,8 +859,6 @@ textarea.input1 + .shadow-input1 {
     -o-transform: translateX(10px);
     transform: translateX(10px);
 }
-
-
 
 
 /*------------------------------------------------------------------
@@ -963,3 +976,4 @@ textarea.input1 + .shadow-input1 {
     }
 }
 
+/*------------------Caroussel-------------------------*/
