--- a/public/css/style.css
+++ b/public/css/style.css
@@ -976,4 +976,13 @@ textarea.input1 + .shadow-input1 {
     }
 }
 
+[name='url[]'], [name='tags[]']{
+    width: 100%;
+}
+
+[name='table_index_length']{
+    width: 60px;
+}
+
+
 /*------------------Caroussel-------------------------*/
