--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,77 @@
     box-sizing: border-box;
 }
 
+.nav_accueil_transparent{
+    background-color: transparent !important;
+    z-index: 999 !important;
+    position: fixed;
+    width: 100%;
+}
+
+.nav_accueil_white{
+    background-color: white !important;
+    z-index: 999 !important;
+    position: fixed;
+    width: 100%;
+    animation: opacityON 1s;
+}
+
+@keyframes opacityON {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes opacityOFF {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
+
+
+.gnBraM {
+    left: 48.4%;
+    transform: translateX(-48.4%);
+}
+
+.gnBraM {
+    position: absolute;
+    top: auto;
+    bottom: 50px;
+    animation: 1s linear 0s infinite normal none running loopAnim;
+}
+
+@keyframes loopAnim {
+    from {
+        height: 80px;
+        opacity: 1;
+    }
+    to {
+        height: 10px;
+        opacity: 0;
+    }
+}
+
+.gnBraM svg {
+    fill: white;
+}
+
+.cbpYqP {
+    display: inline-flex;
+}
+
+.background_main {
+    background: no-repeat url("../img/fond home_png.png") 90% 85%;
+    width: 100%;
+}
+
 /* Make the image fully responsive */
 .carousel-inner img {
     width: 100%;
@@ -48,7 +119,7 @@ table {
     background: #1C282E;
 }
 
-.footerProperty:hover{
+.footerProperty:hover {
     text-decoration: underline;
 }
 
