--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,12 @@
     box-sizing: border-box;
 }
 
+.tox-tinymce {
+    height: 50vh !important;
+    width: 80vw !important;
+    margin: auto !important;
+}
+
 .navbar-light .navbar-toggler{
     color: transparent !important;
     border-color: transparent !important;
