--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,20 @@
     box-sizing: border-box;
 }
 
+
+
+.img_biensAVendre, .img_Actualites{
+    width: 100%;
+    height: 300px;
+}
+
+@media (min-width: 576px) {
+    .img_biensAVendre, .img_Actualites{
+        width: 300px;
+        height: 200px;
+    }
+}
+
 #background_QSN {
     background: no-repeat url("../img/auc1vxt6d5f312.jpg") 50% 50%;
 }
