Correction animation navbar + début remplissage menu burger

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,15 @@
 }
 
 
+#menu_croix{
+    margin-left: 3vw;
+    padding-top: 2.5rem;
+}
+
+#menu_croix:hover{
+    cursor: pointer;
+}
+
 .navbar_burger{
     width: 90%;
 }
@@ -260,7 +269,7 @@
     }
     to {
         opacity: 0;
-        transform: translateY(-100%);
+        z-index: -1;
     }
 }
 
